2016-02-15  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (cleanup): Remove do-nothing proc.
	(log_and_exit): Remove call to cleanup.
	* doc/ref.xml: Remove documentation for cleanup.
	* doc/dejagnu.texi: Regenerate.

2016-02-15  Ben Elliston  <bje@gnu.org>

	Reported by David Malcolm.
	* lib/dejagnu.exp (text): Allow angle brackets in test messages.

2016-02-15  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to version 2016-02-11.
	* config.sub: Update to version 2016-01-01.

2016-02-14  Maxim Kuvyrkov  <maxim.kuvyrkov@linaro.org>

	* lib/remote.exp (remote_exec): Set global timeout for benefit of
	<remote>_exec.

2016-02-14  Ben Elliston  <bje@gnu.org>

	* lib/remote.exp (local_exec): Improve comments.

2016-02-14  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1: Tweak.

2016-02-14  Steve Ellcey  <sellcey@mips.com>

	* baseboards/multi-sim.exp (dynamic_linker_flag): Check
	GCC_UNDER_TEST.
	* baseboards/multi-sim.exp (rpath_flags): Ditto.

2016-01-23  Simon Marchi  <simon.marchi@ericsson.com>

	* lib/remote.exp (standard_file): Reverse return logic for remote
	exists case.

2016-01-23  Simon Marchi  <simon.marchi@ericsson.com>

	* lib/remote.exp (standard_file); Add else clause.

2016-01-16  Ben Elliston  <bje@gnu.org>

	* runtest.exp (runtest): Improve comment about --status.

2016-01-12  Simon Marchi  <simon.marchi@ericsson.com>

	* lib/remote.exp (standard_file): The [ operator does not actually
	output anything. It returns 0 or 1 as its exit code, so "exit `[
	-f $file ]`" always expands to "exit " (equivalent to exit 0).
	Instead, use test(1) to check for file existence.

2015-12-20  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml: Begin overhauling.
	* doc/ref.xml: Likewise.
	* doc/user.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2015-12-20  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1: Miscellaneous minor improvements.

2015-12-09  Yoshinori Sato  <ysato@users.sourceforge.jp>

	* Makefile.am (baseboard_DATA): Add missing rx-sim.exp.